# ekg

./: Cargo.toml
src/ekg/: main.rs
src/ekg_jetson/: gpu.rs  lib.rs  thermal.rs  util.rs
