[package]
name = "ekg"
version = "0.3.0"
authors = ["Dan Bryant <dan@deepwavedigital.com>"]
edition = "2021"

[lib]
name = "ekg_jetson"
path = "src/ekg_jetson/lib.rs"

[[bin]]
name = "ekg"
path = "src/ekg/main.rs"
test = false
doc = false

[dependencies]
chrono = "0.4"

[package.metadata.deb]
maintainer = "Deepwave Digital, Inc. <info@deepwavedigital.com>"
copyright = "2019-2024, Deepwave Digital, Inc. <info@deepwavedigital.com>"
assets = [
    ["target/release/ekg", "usr/bin/", "4755"],
]
